# pffrocd

./: .gitignore  README.md  aby_cos_dist_tests.ipynb  bandwidth_experiments.ipynb  config(laptops eth).ini  config.ini.example  cos_dist_example_fail.ipynb  energy test.ipynb  face recognition models comparison.ipynb  hosts_reset.csv  local_reset.csv  local_reset_100.csv  local_reset_1000.csv  pffrocd.code-workspace  powertop.csv  powertop_tests.ipynb  requirement.txt  requirements.txt  sample_aby_output.txt  test.py
ABY/: CMakeLists.txt
ABY/src/kamil/: CMakeLists.txt
ABY/src/kamil/cos_dist/: CMakeLists.txt  cos_dist.cpp
ABY/src/kamil/cos_dist_copy/: CMakeLists.txt  cos_dist_copy.cpp
ABY/src/kamil/cos_dist_float_nscen_nsimd/: CMakeLists.txt  cos_dist_float_nscen_nsimd.cpp
ABY/src/kamil/cos_dist_float_nscen_simd/: CMakeLists.txt  cos_dist_float_nscen_simd.cpp
ABY/src/kamil/cos_dist_float_scen_simd/: CMakeLists.txt  cos_dist_float_scen_simd.cpp
ABY/src/kamil/cos_dist_float_scen_simd_32/: CMakeLists.txt  cos_dist_float_scen_simd_32.cpp
ABY/src/kamil/cos_dist_float_scen_simd_64/: CMakeLists.txt  cos_dist_float_scen_simd_64.cpp
ABY/src/kamil/cos_dist_float_scen_simd_share/: CMakeLists.txt  cos_dist_float_scen_simd_share.cpp
ABY/src/kamil/cos_dist_int_nscen_simd/: CMakeLists.txt  cos_dist_int_nscen_simd.cpp
ABY/src/kamil/cos_dist_randint_nscen_nsimd/: CMakeLists.txt  cos_dist_randint_nscen_nsimd.cpp
ABY/src/kamil/cos_dist_randint_scen_nsimd/: CMakeLists.txt  cos_dist_randint_scen_nsimd.cpp
ABY/src/kamil/cos_dist_roundfloat_nscen_nsimd/: CMakeLists.txt
(+291 files in other folders)
