add_subdirectory(float_add)
add_subdirectory(cos_sim)
add_subdirectory(cos_sim_simd)
add_subdirectory(cos_sim_int)
add_subdirectory(cos_dist)
add_subdirectory(cos_dist_copy)
add_subdirectory(cos_dist_float_nscen_simd)
add_subdirectory(cos_dist_roundfloat_nscen_simd)
add_subdirectory(cos_dist_int_nscen_simd)
add_subdirectory(cos_dist_float_nscen_nsimd)
add_subdirectory(cos_dist_roundfloat_nscen_nsimd)
add_subdirectory(cos_dist_randint_scen_nsimd)
add_subdirectory(cos_dist_randint_nscen_nsimd)